# ai

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  README.md  TODO.md  api_server.py  check_types.sh  cli.py  cli_file.py  cli_issues.py  deployment.sh  format.sh  lint.sh  main.py  mypy.ini  ollama_analyze.py  ollama_chat.py  ollama_workspace.py  pyproject.toml  pytest-experiments.ini  pytest.ini  requirements.txt  setup.sh  usage_example.sh  worker.py
.github/workflows/: python-app.yml  scan.yml
docs/: ollama-tools-guide.md
scripts/: create_frontend_workspace.py  create_python_workspace.py  test_api_server.py
src/: main.py  prompt_builder.py
src/api/: issues.py
src/ollama/: client.py
src/utils/: code_reader.py
tests/: conftest.py  test_cli.py  test_cli_file.py  test_cli_workspace.py  test_integration.py  test_ollama_analyze.py  test_ollama_chat.py  test_ollama_workspace.py
tests/fixtures/: README.md  expected_ollama_responses.json  sample_api_response.json  sample_javascript.js  sample_python.py
tests/unit/: test_api_issues.py  test_main.py  test_ollama_client.py  test_prompt_builder.py  test_utils_code_reader.py
